# public/swagger.json
@@ -1844,6 +1844,39 @@
         }
       }
     },
+    "/news/get-article/{id}": {
+      "get": {
+        "operationId": "NewsController_getArticle",
+        "summary": "Get article by id",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Article."
+          }
+        }
+      }
+    },
+    "/news/get-sources": {
+      "get": {
+        "operationId": "NewsController_getSources",
+        "summary": "Get all sources",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "List of sources."
+          }
+        }
+      }
+    },
     "/news/search": {
       "get": {
         "operationId": "NewsController_searchArticles",
